[project]
name = "gyt-cli"
version = "0.5.2"

description = "A Python CLI abstracting common Git interactions like Conventional Commit and Atlassian Smart Commit helpers"
authors = [{ name = "Nate Ferrell", email = "nate@scrthq.com" }]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "typer>=0.16.1",
    "gitpython>=3.1.43,<4",
    "pyyaml>=6.0.1,<7",
    "pydantic>=2.6.4,<3",
]

[project.scripts]
gyt = "gyt_cli.cli:app"

[tool.pytest.ini_options]
addopts = "--junitxml=test-results.xml --html=test-results.html --self-contained-html -rA"
testpaths = [
    "tests",
    "integration",
]

[tool.hatch.build.targets.sdist]
include = ["gyt_cli"]

[tool.hatch.build.targets.wheel]
include = ["gyt_cli"]

[tool.hatch.build.targets.wheel.sources]
"gyt_cli" = "gyt_cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "pytest-html>=4.1.1",
    "pytest-black>=0.6.0",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
